<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <RelativeLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/grid_x3"
            android:layout_marginBottom="@dimen/grid_x3"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/photoIV"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_width"
                android:layout_marginBottom="@dimen/grid_x2"
                android:src="@drawable/default_user"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/grid_x2"
                android:layout_below="@+id/photoIV"
                android:theme="@style/TextInputLayoutUnderlineColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:enabled="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/grid_x2"
                android:layout_below="@+id/emailTIL"
                android:theme="@style/TextInputLayoutUnderlineColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/grid_x2"
                android:layout_below="@+id/usernameTIL"
                android:theme="@style/TextInputLayoutUnderlineColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/applyButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/passwordTIL"
                android:layout_marginBottom="@dimen/grid_x2"
                android:text="@string/button_apply"
                style="@style/StandardButton"
                android:onClick="onApply"/>

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@+id/applyButton"
                android:text="@string/logout_button"
                android:layout_marginBottom="@dimen/grid_x2"
                style="@style/StandardButton"
                android:onClick="onLogout"/>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/profileProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:elevation="5dp"
        android:background="@color/transparent_gray"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/orange" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>